--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -1,9 +1,13 @@
+.searchField {
+  height: 850px;
+  margin-top: 50px;
+}
+
 .schoolList {
   font-family: "Ubuntu", sans-serif;
   width: 1050px;
   height: 750px;
   overflow-y: scroll;
-  margin-top: 50px;
 }
 
 .schoolList::-webkit-scrollbar {
