made responsive forms

--- a/client/src/components/LandingSec.css
+++ b/client/src/components/LandingSec.css
@@ -1,47 +1,49 @@
 .sec-container {
-    
     height: auto;
-    min-height: 77vh;
+    /* min-height: 77vh; */
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    object-fit: contain;
+    padding-top: 80px;
+    /* object-fit: contain; */
 }
 
 .sec-container>h3 {
     color: black;
     font-size: 50px;
-    margin-top: -50px;
-    margin-left: 20%;
+    margin-bottom: 50px;
+    /* margin-left: 20%; */
 }
 
 .student>img{
     height: 450px;
     width: 1000px;
-    margin-bottom: -250px;
-    margin-left: 10%;
+    /* margin-bottom: -250px;
+    margin-left: 10%; */
 }
 .text {
-    margin-left: 25%;
+    /* margin-left: 25%; */
 }
 
 .sec-btns {
-    margin-top: 32px;
-    margin-left: 15%;
+    margin-bottom: 60px;
+    /* margin-left: 15%; */
 }
 
 .sec-btns .btn {
-    margin-bottom: 25px;
-    background-color: red;
-    border: 2px solid red;
+    /* margin-bottom: 25px; */
+    background-color: #B71C1C;
+    border: 2px solid #B71C1C;
     border-radius: 5px;
-    margin-left: 30%;
+    width: 200px;
+    /* margin-left: 30%; */
 }
 
 .sec-btns .btn:hover {
     background-color: white;
-    color: red;
+    color: #B71C1C;
 }
 
 @media screen and (max-width: 768px) {
