--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -3,7 +3,7 @@
     text-align: center;
     height: 50px;
     width: 100%;
-    background-color: rgb(26, 27, 77);
+    background-color: #000051;
 }
 
 .footer>p{
@@ -18,7 +18,7 @@
         text-align: center;
         height: 30px;
         width: 100%;
-        background-color: rgb(26, 27, 77);
+        background-color: #000051;
     }
     .footer>p{
         color: white;
