--- a/client/src/components/LandingSec.css
+++ b/client/src/components/LandingSec.css
@@ -1,44 +1,34 @@
 .sec-container {
-    height: auto;
-    /* min-height: 77vh; */
+    min-height: 70vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-top: 80px;
-    /* object-fit: contain; */
 }
 
 .sec-container>h3 {
     color: black;
     font-size: 50px;
-    margin-bottom: 50px;
-    /* margin-left: 20%; */
+    margin: 30px 0 50px 0;
 }
 
 .student>img{
-    height: 450px;
+    height: auto;
     width: 1000px;
-    /* margin-bottom: -250px;
-    margin-left: 10%; */
-}
-.text {
-    /* margin-left: 25%; */
+    margin-top: 70px;
 }
 
 .sec-btns {
     margin-bottom: 60px;
-    /* margin-left: 15%; */
 }
 
 .sec-btns .btn {
-    /* margin-bottom: 25px; */
     background-color: #B71C1C;
     border: 2px solid #B71C1C;
     border-radius: 5px;
     width: 200px;
-    /* margin-left: 30%; */
 }
 
 .sec-btns .btn:hover {
@@ -48,7 +38,7 @@
 
 @media screen and (max-width: 768px) {
     .sec-container {
-         height: auto;
+        height: auto;
         min-height: 85vh;
     }
     .sec-container>h3 {
