Fixed landing page, change sign up, add link for sign up, add home link Closes gh-64, closes gh-65, closes gh-67, closes gh-68

--- a/client/src/components/LandingSec.css
+++ b/client/src/components/LandingSec.css
@@ -38,19 +38,18 @@
 
 @media screen and (max-width: 768px) {
     .sec-container {
-        height: auto;
-        min-height: 85vh;
+        min-height: 80vh;
+        width: 90%;
+        padding-top: 30px;
+        margin: auto;
     }
     .sec-container>h3 {
-        margin-left: 10%;
         font-size: 25px;
-        margin-top: -100px;
     }
-    .sec-btns .btn {
-        margin-left: 10%;
+    .sec-btns{
+        margin-bottom: 40px;
     }
     .text {
-        margin-left: 10%;
         font-size: 15px;
     }
     .btn-mobile {
@@ -61,7 +60,25 @@
         width: 60%;
     }
     .student>img{
-        width: 400px;
-        height: 300px;
+        width: 320px;
+        height: auto;
+        margin-top: 20px;
+    }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .sec-container {
+        min-height: 91vh;
+        width: 90%;
+        padding-top: 30px;
+        margin: auto;
+       
+    }
+    .student>img{
+        width: 600px;
+        height: auto;
+        margin-top: 40px;
     }
 }
