--- a/client/src/components/pages/Login.css
+++ b/client/src/components/pages/Login.css
@@ -11,6 +11,7 @@
     border: 3px solid #B71C1C !important;
   }
 
+
   .form-check-label{
     font-size: 1.1rem;
     margin-bottom: 10px;
@@ -22,9 +23,13 @@
       height: 77vh;
       min-width: 80%
     }
+
+    .register-form{
+      min-width: 80%;
+    }
     
-    form{
-      width:80%
+    .main-form{
+      min-width:80%
     }
     .link{
       width: 100%;
@@ -44,6 +49,10 @@
   }
   .register-form{
     min-width: 80%;
+  }
+
+  .main-form{
+    min-width:80%
   }
 
 }
