--- a/client/src/components/LandingSec.css
+++ b/client/src/components/LandingSec.css
@@ -1,5 +1,5 @@
 .sec-container {
-    min-height: 70vh;
+    min-height: 90vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -8,15 +8,15 @@
     padding-top: 80px;
 }
 
-.sec-container>h3 {
+.sec-container>p{
     color: black;
-    font-size: 50px;
+    font-size: 30px;
     margin: 30px 0 50px 0;
 }
 
 .student>img{
     height: auto;
-    width: 1000px;
+    width: 500px;
     margin-top: 70px;
 }
 
@@ -35,15 +35,18 @@
     background-color: white;
     color: #B71C1C;
 }
+.text{
+    font-size: 20px;
+}
 
 @media screen and (max-width: 768px) {
     .sec-container {
         height: auto;
         min-height: 85vh;
     }
-    .sec-container>h3 {
+    .sec-container>p {
         margin-left: 10%;
-        font-size: 25px;
+        font-size: 20px;
         margin-top: -100px;
     }
     .sec-btns .btn {
@@ -62,6 +65,6 @@
     }
     .student>img{
         width: 400px;
-        height: 300px;
+        height: 150px;
     }
 }
