--- a/client/src/components/Info.css
+++ b/client/src/components/Info.css
@@ -38,8 +38,9 @@ h3{
     width: 40%;
 }
 .img1{
-    width: 400px;
-    height: 250px;
+    margin-top: 20%;
+    width: 300px;
+    height: 200px;
     
 }
 
@@ -66,8 +67,8 @@ h3{
   margin-left: 10%; 
 }
 .img2{
-    width: 450px;
-    height: 400px;
+    width: 350px;
+    height: 250px;
 }
 .boxList{
     display: flex;
@@ -117,8 +118,9 @@ margin-left: 10%;
     width: 40%;
 }
 .img3{
-    width: 400px;
-    height: 250px;
+    margin-top: 15%;
+    width: 300px;
+    height: 200px;
    }
 .box{
     display: flex;
@@ -130,7 +132,7 @@ margin-left: 10%;
     box-shadow: 0px 3px 4px 5px rgb(230, 225, 225);
     border-radius: 10px;
     width: 35%;
-    height: 250px;
+    height: 290px;
     padding: 20px;
     margin: 10px;
 
@@ -154,8 +156,9 @@ margin-left: 10%;
     width: 40%
 }
 .img4{
-    width: 400px;
-    height: 300px;
+    margin-top: 15%;
+    width: 300px;
+    height: 200px;
 }
 
 
@@ -187,9 +190,8 @@ margin-left: 10%;
       width: 80%;
       margin-bottom: 10px;
   }
-  .img1{
-      width: 400px;
-      height: 250px;
+  .img1, .img2, .img3, .img4{
+      display: none;
       
   }
   .apart{
@@ -201,10 +203,7 @@ margin-left: 10%;
     width: 80%;
     margin-left: 1%;
 }
-.img2{
-    width: 400px;
-    height: 300px;
-}
+
 .part2{
     width:95%;
 }
@@ -264,10 +263,7 @@ margin-left: 10%;
 .image3{
     width: 95%;
 }
-.img3{
-    width: 400px;
-    height: 300px;
-   }
+
 .box{
     display: flex;
     width: 90%;
@@ -300,9 +296,6 @@ margin-left: 10%;
 .image4{
     width: 90%
 }
-.img4{
-    width: 400px;
-    height: 300px;
-}
+
 
 }
