--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -1,96 +1,159 @@
 .searchField {
-  height: 850px;
-  margin-top: 50px;
+    height: 850px;
+    margin-top: 50px;
 }
 
 .schoolList {
-  font-family: "Ubuntu", sans-serif;
-  width: 1050px;
-  height: 750px;
-  overflow-y: scroll;
+    font-family: "Ubuntu", sans-serif;
+    width: 1050px;
+    height: 750px;
+    overflow-y: scroll;
 }
 
 .schoolList::-webkit-scrollbar {
-  width: 30px;
-  border: 1px solid #000;
-  border-radius: 5px;
+    width: 30px;
+    border: 1px solid #000;
+    border-radius: 5px;
 }
 
 .schoolList::-webkit-scrollbar-thumb {
-  border-radius: 7px;
-  background-color: #000051;
-  border: 1px solid #000;
+    border-radius: 7px;
+    background-color: #000051;
+    border: 1px solid #000;
+}
+
+.schollListItem_container {
+    /* border: 1px solid red; */
+    flex-direction: column;
+}
+
+.schollListItem_container * {
+    /* border: 1px solid red; */
 }
 
 .schoolListItem {
-  width: 955px;
-  height: 300px;
-  margin: 2em;
-  padding: 1.5em;
-  background: #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  display: flex;
-  justify-content: space-between;
+    /* border: 1px solid red; */
+    width: 955px;
+    min-height: 300px;
+    margin: 2em;
+    padding: 1.5em;
+    background: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+}
+
+.school_wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .schoolName {
-  text-align: left;
-  font-size: 25px;
-  font-weight: 700;
-  color: #000051;
-  margin-bottom: 5px;
+    text-align: left;
+    font-size: 25px;
+    font-weight: 700;
+    color: #000051;
+    margin-bottom: 5px;
 }
 
 .schoolContact {
-  text-align: left;
-  margin-bottom: 5px;
-  font-size: 18px;
+    text-align: left;
+    margin-bottom: 5px;
+    font-size: 18px;
 }
 
 .btn-container {
-  margin: 1em 0 1em 0;
-  text-align: left;
+    /* margin: 1em 0 1em 0; */
+    text-align: left;
 }
 
 .schoolList-btn {
-  color: #ffffff;
-  font-size: 18px;
-  background-color: #000051;
-  border-radius: 20px;
-  border: 1px solid #000051;
-  padding: 0.4em 0.7em;
-  margin-right: 40px;
+    color: #ffffff;
+    font-size: 18px;
+    background-color: #000051;
+    border-radius: 20px;
+    border: 1px solid #000051;
+    padding: 0.4em 0.7em;
+    margin-right: 40px;
+}
+
+.schoolList-rating {
+    color: #000051;
+    font-size: .8em;
 }
 
 .schoolList-btn:hover {
-  background-color: #ffffff;
-  color: #000051;
+    background-color: #ffffff;
+    color: #000051;
 }
 
 .schoolList-btn:focus {
-  outline-width: 0px;
+    outline-width: 0px;
 }
 
 .review-container {
-  text-align: left;
-  font-size: 18px;
-  margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+    font-size: 1em;
+}
+
+.review-average {
+    color: #000051;
+    font-size: 0.8em;
+    font-weight: bold;
 }
 
 .fa-star {
-  padding: 0 0.3em 0 0.3em;
+    padding: 0 0.3em 0 0.3em;
 }
 
 .fa-star:hover {
-  color: #000051;
-  font-weight: 700;
+    color: #000051;
+    font-weight: 700;
+}
+
+.fa-chevron-down,
+.fa-chevron-up {
+    color: rgb(183, 28, 28, 0.8);
+    font-weight: 700;
+}
+
+.school-comments-qty p {
+    display: block;
+    float: right;
+    cursor: pointer;
+    padding: 0.4em 0;
+}
+
+.school-details {
+    width: 68%;
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
 }
 
 .schoolListItem-rightSide {
-  min-width: 140px;
-  font-size: 18px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-between;
+    width: 30%;
+    /* border: 1px solid blue; */
+    min-width: 140px;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+.comments_list_container {
+    margin-top: 2em;
+    background: #fefefe;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
