--- a/client/src/components/pages/RegisterSchool.css
+++ b/client/src/components/pages/RegisterSchool.css
@@ -2,6 +2,7 @@
   max-width: 733px;
   margin: auto;
   margin-top: 74px;
+  margin-bottom: 74px;
   height: 645px;
   padding: 25px 62px;
   box-shadow: 0px 4px 10px #000051;
