--- a/client/src/components/aboutSchool.css
+++ b/client/src/components/aboutSchool.css
@@ -26,14 +26,33 @@ summary::-webkit-details-marker {
    list-style: none; 
   }
   
+
+  /* specific heights */
   details[open] summary ~ * {
-    animation: sweep .5s ease-in-out;
+    animation-name: invisiblyGrowFontSize, fadeIn;
+    animation-duration: 300ms, 200ms;
+    animation-delay: 0ms, 300ms;
   }
 
-  @keyframes sweep {
-    0%    {opacity: 0; margin-left: -10px}
-    100%  {opacity: 1; margin-left: 0px}
+  /* add wrapper, continue with font-size */
+@keyframes invisiblyGrowFontSize {
+  0% {
+    font-size: 0;
+    opacity: 0;
   }
+  100% {
+    font-size: 1em;
+    opacity: 0;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 
  @media screen and (max-width: 768px) {
