--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -108,7 +108,7 @@
 
 .searchBar {
   
-  margin: 20px 20px 20px 15%;
+  margin: 20px 10% 20px 15%;
   padding: 5px 8px;
   width: 750px;
   border-radius: 10px;
