--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -12,19 +12,6 @@
   height: 750px;
   overflow-y: scroll;
 }
-/*
-.schoolList::-webkit-scrollbar {
-  width: 30px;
-  border: 1px solid #000;
-  border-radius: 5px;
-}
-
-.schoolList::-webkit-scrollbar-thumb {
-  border-radius: 7px;
-  background-color: #000051;
-  border: 1px solid #000;
-}
-*/
 
 .schoolListItem {
   width: 955px;
@@ -173,4 +160,39 @@
   text-decoration: underline;
   cursor: pointer;
   margin-left: 1em;
+}
+
+
+@media screen and (max-width: 768px) {
+
+  .searchField {
+    height: 900px;
+    width: 70%;
+    margin: left;
+  }
+  .schoolList {
+    font-family: "Ubuntu", sans-serif;
+    width: 400px;
+    height: 800px;
+    overflow-y: scroll;
+  }
+  .searchBarInput {
+    width: 200px;
+    outline: none;
+    border: none;
+    font-size: 20px;
+    background-color: rgba(211, 211, 211, 0.705);;
+  }
+  .searchBar {
+    margin: 20px 10% 20px 15%;
+    padding: 5px 8px;
+    width: 300px;
+    border-radius: 10px;
+    border: none;
+    border: 1px solid white;
+    background-color: rgba(211, 211, 211, 0.945);
+  }
+  .searchBarInput::placeholder {
+    font-size: 15px;
+  }
 }
