--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -64,14 +64,6 @@
     height: 100%;
     font-size: 15px;
 }
-
-/*
-.fa-info-circle,.fa-home,.fa-user-circle,.fa-search-plus,.fa-plus, .fa-synagogue,.fa-plus-circle,.fa-sign-out-alt,.fa-sign-in-alt{
-   font-size: 30px;
-    color: white;
-    padding-top: 15px;
-}
-*/
 .icons{
     font-size: 30px;
     color: white;
@@ -82,10 +74,14 @@
     font-size: 12px;
    }
 
-.nav-links:hover {
+.nav-links:hover,.Logoutbtn:hover {
     transform: scale(1.2);
     color: transparent;
 }
+.Logoutbtn{
+    margin-top: -5px;
+}
+
 .btn-link {
     color: white;
     font-size: 1.2rem;
@@ -102,6 +98,7 @@
 .menu-icon {
     display: none;
 }
+
 
 @media screen and (max-width: 768px) {
     .icons{
