Search page optimizations

--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -164,3 +164,12 @@
   cursor: pointer;
   margin-left: 1em;
 }
+
+.noResult {
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 3px 3px 3px 3px;
+  color: #059;
+}
+
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css");
