--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background:#000051;
-    height: 80px;
+    background: #000051;
+    /* height: 80px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,32 +12,39 @@
     border-bottom: solid 2px rgb(218, 52, 80);
 }
 
+
+/* .navbar * {
+    border: 1px solid red;
+} */
+
 .navbar-icon {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 80px;
-    width: 100%;
+    width: 90%;
 }
 
 .navbar-logo {
+    display: block;
     color: #fff;
     justify-self: start;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
 }
 
-.navbar-logo>img{
-    height: 50px;
-    width: 88px;
-    
-
+.navbar-logo>img {
+    /* height: 50px; */
+    width: 70px;
+    margin: 0px;
 }
 
+
+/* 
 .nav-menu {
     display: grid;
     grid-template-columns: repeat(8, auto);
@@ -47,38 +54,62 @@
     width: 60vw;
     justify-content: end;
     margin-right: 2rem;
+    margin-bottom: 0;
+} */
+
+.nav-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 40vw;
+    margin-bottom: 0;
+    padding: 0;
 }
 
 .nav-item {
-    height: 80px;
+    height: 100%;
+    /*height: 80px;*/
     text-decoration: none;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-links {
     color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    /* flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
-    font-size: 15px;
+    font-size: 15px; */
 }
-.icons{
+
+.icons {
     font-size: 30px;
     color: white;
-    padding-top: 15px;
+    /* padding-top: 15px; */
 }
 
-.icon{
+.icon {
     font-size: 12px;
-   }
-
-.nav-links:hover,.Logoutbtn:hover {
-    transform: scale(1.2);
-    color: transparent;
+    margin: 0;
 }
-.Logoutbtn{
+
+.nav-links:hover,
+.Logoutbtn:hover {
+    transform: scale(1.2);
+    text-decoration: none;
+    color: #fff;
+    /* color: transparent; */
+}
+
+.Logoutbtn {
     margin-top: -5px;
 }
 
@@ -87,7 +118,7 @@
     font-size: 1.2rem;
 }
 
-.fa-bars{
+.fa-bars {
     color: white;
 }
 
@@ -99,18 +130,16 @@
     display: none;
 }
 
-
 @media screen and (max-width: 768px) {
-    .icons{
+    .icons {
         font-size: 20px;
         color: black;
     }
-   
-.navbar-logo>img{
-        height: 50px;
+    .navbar-logo>img {
+        /* height: 50px; */
         width: 70px;
-        }
-
+        margin: 0
+    }
     .NavbarItems {
         position: relative;
     }
@@ -121,7 +150,7 @@
     .fa-times {
         color: #fff;
         font-size: 2rem;
-      }
+    }
     .nav-menu {
         display: flex;
         flex-direction: column;
@@ -140,25 +169,26 @@
         transition: all 0.5s ease;
         z-index: 1;
     }
-    .nav-links{
+    .nav-links {
         text-align: center;
         padding: 0;
         width: 100%;
         display: table;
         margin-top: 5px;
     }
-    .nav-links:hover, .Logoutbtn:hover {
-        background-color:lightgray;
+    .nav-links:hover,
+    .Logoutbtn:hover {
+        background-color: lightgray;
         color: white;
         border-radius: 0;
     }
-    .navbar-logo {
+    /* .navbar-logo {
         position: absolute;
         top: 0;
         left: 0;
         transform: translate(25%, 50%);
-    }
-    .menu-icon{
+    } */
+    .menu-icon {
         display: block;
         position: absolute;
         top: 0;
@@ -167,7 +197,6 @@
         font-size: 1.8rem;
         cursor: pointer;
     }
-  
     .nav-links-mobile {
         display: block;
         text-align: center;
@@ -182,12 +211,11 @@
         border: 1px solid #fff;
         transition: all 0.3s ease-out;
     }
-  
-.add-school{
-    margin-top: -17%;
-}
-.Logoutbtn{
-    margin-top: 0%;
-    margin-left: 19%;
-      }
+    .add-school {
+        margin-top: -17%;
+    }
+    .Logoutbtn {
+        margin-top: 0%;
+        margin-left: 19%;
+    }
 }
