--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -9,13 +9,9 @@
     top: 0;
     z-index: 999;
     width: 100%;
-    border-bottom: solid 2px rgb(218, 52, 80);
+    /* border-bottom: solid 2px rgb(218, 52, 80); */
+    border-bottom: solid 2px #fff;
 }
-
-
-/* .navbar * {
-    border: 1px solid red;
-} */
 
 .navbar-icon {
     display: flex;
