--- a/client/src/components/pages/RegisterSchool.css
+++ b/client/src/components/pages/RegisterSchool.css
@@ -1,4 +1,4 @@
-.add-school {
+.RegisterSchool {
   max-width: 733px;
   margin: auto;
   margin-top: 74px;
@@ -8,14 +8,14 @@
   box-shadow: 0px 4px 10px #000051;
 }
 
-.add-school-title {
+.RegisterSchool .add-school-title {
   font-family: Ubuntu;
   font-size: 24px;
   font-weight: bold;
   margin: 0 auto 22px auto;
 }
 
-.register-button-group {
+.RegisterSchool .register-button-group {
   width:100%;
   display: flex;
   flex-direction: row-reverse;
@@ -23,11 +23,11 @@
   padding-left: 40%;
 }
 
-.i-register-check {
+.RegisterSchool .i-register-check {
   margin-left: 1em;
 }
 
-.i-register-check>label {
+.RegisterSchool .i-register-check>label {
   font-family: Ubuntu;
   font-style: normal;
   font-weight: normal;
@@ -36,7 +36,7 @@
   margin-bottom: 7px;
 }
 
-.i-register-check>input {
+.RegisterSchool .i-register-check>input {
   width: 16px;
   height: 17px;
   
@@ -44,24 +44,24 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.RegisterSchool .react-select__control {
+  height: 25.33px;
+  border: 1px solid #8B8B8B;
+  border-radius: 0%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
 @media screen and (max-width: 768px) {
-  .add-school {
+  .RegisterSchool {
     height: fit-content;
     margin: 0;
     padding: 25px 5px;
   }
 
-  .register-button-group {
+  .RegisterSchool .register-button-group {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     padding: unset;
   }
-}
-
-.react-select__control {
-  height: 25.33px;
-  border: 1px solid #8B8B8B;
-  border-radius: 0%;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
