--- a/client/src/components/filterSchool.css
+++ b/client/src/components/filterSchool.css
@@ -45,9 +45,10 @@ label {
     width: 300px;
 }
 
-.starRating * {
+
+/* .starRating * {
     float: right;
-}
+} */
 
 .starRating * {
     size: 10px;
