fixing in calculations and layout

--- a/client/src/components/LandingSec.css
+++ b/client/src/components/LandingSec.css
@@ -62,9 +62,9 @@
         display: block;
         text-decoration: none;
     }
-    .btn {
+    /* .btn {
         width: 60%;
-    }
+    } */
     .student>img {
         width: 320px;
         height: auto;
