--- a/client/src/components/filterSchool.css
+++ b/client/src/components/filterSchool.css
@@ -14,16 +14,18 @@ legend {
   font-weight: 700;
 }
 
-input[type="radio"] {
-  height: 20px;
-  width: 20px;
-  margin-right: 5px;
+input[type="checkbox"] {
+  height: 22px;
+  width: 22px;
+  margin-right: 0.5em;
 }
 
 label {
   font-size: 25px;
+  cursor: pointer;
 }
 
+/* stars rating */
 .starRating {
   display: inline-block;
 }
