--- a/client/src/components/Comment/CommentRecord.css
+++ b/client/src/components/Comment/CommentRecord.css
@@ -26,8 +26,9 @@
 }
 
 .comment_header span {
-    color: rgb(183, 28, 28);
+    color: rgb(183, 28, 28, .8);
     font-weight: 700;
+    font-style: normal;
 }
 
 .comment_created {
@@ -118,4 +119,8 @@
     font-size: ".8em";
     margin: "0";
     text-align: "center",
+}
+
+.fa-user-graduate {
+    color: rgb(183, 28, 28, 0.7);
 }
