Bugs fixing Closes gh-102, closes gh-103, closes gh-106, closes gh-109, closes gh-117

--- a/client/src/components/pages/Login.css
+++ b/client/src/components/pages/Login.css
@@ -12,9 +12,9 @@
   }
 
   .hovered-google.btn.btn-primary:hover{
-    color: #4285f4;
-    background-color:#ffff !important;
-    border: 3px solid #4285f4 !important;
+    color: #ffff !important;
+    background-color: #000051!important;
+    border: 3px solid #000051 !important;
   }
 
 
@@ -36,12 +36,19 @@
     
     .main-form{
       min-width: 80%;
+      min-height: 80vh !important;
     }
     div.link{
       width: 100% !important;
       font-size: 0.8rem !important;
       justify-content: center !important;
       margin: auto !important;
+      display: flex;
+      flex-direction: column;
+    }
+
+    div.link .back-to-register{
+      margin-bottom: 15px;
     }
 
     .hovered-google.btn.btn-primary{
@@ -52,6 +59,7 @@
     .hovered-blue.btn.btn-primary,
     .hovered-red.btn.btn-primary{
       font-weight: 400 !important;
+      width: 180px !important;
     }
 
     .password-rule{
@@ -69,6 +77,7 @@
   }
   .register-container{
     min-width: 80%;
+    min-height: 83vh !important;
   }
   .register-form{
     min-width: 80%;
