--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -12,6 +12,16 @@
   overflow-y: scroll;
 }
 
+/* hide scroll-bar for overflow */
+.schoolList::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari and Opera */
+}
+
+.schoolList {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .schoolListItem {
   width: 955px;
   min-height: 300px;
