--- a/client/src/components/filterSchool.css
+++ b/client/src/components/filterSchool.css
@@ -1,126 +1,125 @@
 .filterContainer {
-    font-family: "Ubuntu", sans-serif;
-    width: 18%;
-    height: 750px;
-    margin-left: -22%;
-    margin-top: 6%;
-    background-color: #000051;
-    padding: 20px;
-    padding-left: 30px;
-    color: white;
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
+  font-family: "Ubuntu", sans-serif;
+  /* width: 18%; */
+  height: 750px;
+  /* margin-left: -22%; */
+  margin-top: 6%;
+  background-color: #000051;
+  padding: 20px;
+  padding-left: 40px;
+  color: white;
+  border-radius: 10px;
+  /* border-top-right-radius: 10px; */
 }
 
-.filterContainer>h1 {
-    padding-top: 30%;
-    font-size: 18px;
+.filterContainer > h1 {
+  padding-top: 5%;
+  font-size: 18px;
 }
 
 .filterItem {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
-.filterItem>.language {
-    font-size: 18px;
+.filterItem > .language {
+  font-size: 18px;
 }
 
 legend {
-    font-size: 20px;
-    font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 input[type="radio"] {
-    height: 18px;
-    width: 18px;
-    margin-right: 5px;
+  height: 18px;
+  width: 18px;
+  margin-right: 5px;
 }
 
 label {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 .starRating {
-    display: inline-block;
-    width: 300px;
+  display: inline-block;
+  width: 300px;
 }
-
 
 /* .starRating * {
     float: right;
 } */
 
 .starRating * {
-    size: 10px;
+  size: 10px;
 }
 
 .inputStar {
-    display: none;
+  display: none;
 }
 
 .labelStar {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .labelStar:hover {
-    color: white;
+  color: white;
 }
 
-.inputStar:hover~.labelStar {
-    font-weight: 400;
+.inputStar:hover ~ .labelStar {
+  font-weight: 400;
 }
 
-.inputStar:checked~.labelStar {
-    color: white;
-    font-weight: 700;
+.inputStar:checked ~ .labelStar {
+  color: white;
+  font-weight: 700;
 }
 
 .Searchbtn {
-    width: 150px;
-    background: #B71C1C;
-    border: none;
-    border-Radius: 10px;
-    font-size: 1.1rem;
-    padding: 8px 25px;
-    margin: 10px;
-    color: #fff;
+  width: 150px;
+  background: #b71c1c;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.1rem;
+  padding: 8px 25px;
+  margin: 10px;
+  color: #fff;
 }
 
 .Searchbtn:hover {
-    color: #B71C1C;
-    background-color: white;
+  color: #b71c1c;
+  background-color: white;
 }
 
 @media screen and (max-width: 768px) {
-    .wholeContainer {
-        flex-direction: column;
-    }
-    .filterContainer {
-        font-family: "Ubuntu", sans-serif;
-        width: 80%;
-        height: 750px;
-        margin-left: 10%;
-        margin-top: 10%;
-        background-color: #000051;
-        padding: 5px;
-        color: white;
-        border-radius: 10px;
-        padding-left: 20%;
-    }
-    .filterContainer>h1 {
-        padding-top: 10%;
-        font-size: 18px;
-    }
-    .Searchbtn {
-        font-size: 15px;
-        padding: 8px 2px;
-    }
-    .search {
-        width: 100px;
-        margin-top: 50px;
-        margin-left: -50px;
-    }
-    .reset {
-        width: 120px;
-    }
+  .wholeContainer {
+    flex-direction: column;
+  }
+  .filterContainer {
+    font-family: "Ubuntu", sans-serif;
+    width: 80%;
+    height: 750px;
+    margin-left: 10%;
+    margin-top: 10%;
+    background-color: #000051;
+    padding: 5px;
+    color: white;
+    border-radius: 10px;
+    padding-left: 20%;
+  }
+  .filterContainer > h1 {
+    padding-top: 10%;
+    font-size: 18px;
+  }
+  .Searchbtn {
+    font-size: 15px;
+    padding: 8px 2px;
+  }
+  .search {
+    width: 100px;
+    margin-top: 50px;
+    margin-left: -50px;
+  }
+  .reset {
+    width: 120px;
+  }
 }
