--- a/client/src/components/filterSchool.css
+++ b/client/src/components/filterSchool.css
@@ -1,19 +1,20 @@
 .filterContainer {
   font-family: "Ubuntu", sans-serif;
-  width: 18%;
+  /* width: 18%; */
   height: 750px;
-  margin-left: -22%;
+  /* margin-left: -22%; */
   margin-top: 6%;
   background-color: #000051;
   padding: 20px;
   padding-left: 30px;
   color: white;
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 10px;
 }
 
+
+
 .filterContainer > h1 {
-  padding-top: 30%;
+  padding-top: 5%;
   font-size: 18px;
 }
 
@@ -29,6 +30,7 @@ legend {
   font-size: 20px;
   font-weight: 700;
 }
+
 
 input[type="checkbox"] {
   height: 18px;
