--- a/client/src/components/getSchools.css
+++ b/client/src/components/getSchools.css
@@ -23,7 +23,6 @@
 }
 
 .schoolListItem {
-  width: 955px;
   min-height: 300px;
   margin: 2em auto;
   padding: 1.5em;
@@ -54,7 +53,7 @@
 }
 
 .btn-container {
-  /* margin: 1em 0 1em 0; */
+  display: flex;
   text-align: left;
 }
 
@@ -66,6 +65,7 @@
   border: 1px solid #000051;
   padding: 0.4em 0.7em;
   margin-right: 40px;
+  white-space: nowrap;
 }
 
 .schoolList-rating {
@@ -131,7 +131,6 @@
 }
 
 .school-details {
-  width: 62%;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -139,7 +138,6 @@
 }
 
 .schoolListItem-rightSide {
-  width: 36%;
   min-width: 140px;
   font-size: 18px;
   display: flex;
@@ -279,6 +277,10 @@
     width: 400px;
     height: 800px;
     overflow-y: scroll;
+  }
+
+  .school_wrapper {
+    flex-direction: column;
   }
   .searchBarInput {
     width: 200px;
